Update to depend on FFX 26.0.0